:fire: remove rotas não implementadas/inutilizadas
