# internal/server/historico.go
@@ -9,23 +9,6 @@ import (
 	_ "redirectfy/internal/models"
 )
 
-// PricingHistory godoc
-//
-// @Summary Retorna o histórico de ações relativas a planos de assinatura no sistema
-//
-// @Tags    Admin
-//
-// @Accept  json
-//
-// @Produce json
-//
-// @Success 200 {object} []models.HistoricoPlanoDeAssinatura
-//
-// @Failure 400 {object} echo.HTTPError
-//
-// @Failure 500 {object} echo.HTTPError
-//
-// @Router  /admin/pricing_history [get]
 func (s *Server) PricingHistory(c echo.Context) error {
 	historico, err := s.HistoricoModel.PlanoDeAssinaturaReadAll()
 
@@ -37,23 +20,6 @@ func (s *Server) PricingHistory(c echo.Context) error {
 	return c.JSON(http.StatusOK, historico)
 }
 
-// KirvanoHistory godoc
-//
-// @Summary Retorna o histórico de ações relativas a usuários da Kirvano no sistema
-//
-// @Tags    Admin
-//
-// @Accept  json
-//
-// @Produce json
-//
-// @Success 200 {object} []models.HistoricoUsuarioTemporario
-//
-// @Failure 400 {object} echo.HTTPError
-//
-// @Failure 500 {object} echo.HTTPError
-//
-// @Router  /admin/kirvano_history [get]
 func (s *Server) KirvanoHistory(c echo.Context) error {
 	historico, err := s.HistoricoModel.UsuarioTemporarioReadAll()
 
@@ -65,23 +31,6 @@ func (s *Server) KirvanoHistory(c echo.Context) error {
 	return c.JSON(http.StatusOK, historico)
 }
 
-// UserHistory godoc
-//
-// @Summary Retorna o histórico de ações relativas a usuários no sistema
-//
-// @Tags    Admin
-//
-// @Accept  json
-//
-// @Produce json
-//
-// @Success 200 {object} []models.HistoricoUsuario
-//
-// @Failure 400 {object} echo.HTTPError
-//
-// @Failure 500 {object} echo.HTTPError
-//
-// @Router  /admin/user_history [get]
 func (s *Server) UserHistory(c echo.Context) error {
 	historico, err := s.HistoricoModel.UsuarioReadAll()
 
@@ -93,23 +42,6 @@ func (s *Server) UserHistory(c echo.Context) error {
 	return c.JSON(http.StatusOK, historico)
 }
 
-// RedirectHistory godoc
-//
-// @Summary Retorna o histórico de ações relativas a redirecionadores no sistema
-//
-// @Tags    Admin
-//
-// @Accept  json
-//
-// @Produce json
-//
-// @Success 200 {object} []models.HistoricoRedirecionador
-//
-// @Failure 400 {object} echo.HTTPError
-//
-// @Failure 500 {object} echo.HTTPError
-//
-// @Router  /admin/redirect_history [get]
 func (s *Server) RedirectHistory(c echo.Context) error {
 	historico, err := s.HistoricoModel.RedirecionadorReadAll()
 
@@ -121,23 +53,6 @@ func (s *Server) RedirectHistory(c echo.Context) error {
 	return c.JSON(http.StatusOK, historico)
 }
 
-// LinkHistory godoc
-//
-// @Summary Retorna o histórico de ações relativas a links no sistema
-//
-// @Tags    Admin
-//
-// @Accept  json
-//
-// @Produce json
-//
-// @Success 200 {object} []models.HistoricoLink
-//
-// @Failure 400 {object} echo.HTTPError
-//
-// @Failure 500 {object} echo.HTTPError
-//
-// @Router  /admin/link_history [get]
 func (s *Server) LinkHistory(c echo.Context) error {
 	historico, err := s.HistoricoModel.LinkReadAll()
 
